test/fail/ac/ruleswithoutprincipal.app
//Error: cannot have access control rules without a principal declaration:
application test

access control rules

  rule page name()
  {
    true
  }
